# ddns-renew

./: .env.example  README.md  main.py  pyproject.toml
.github/workflows/: renew.yml
src/ddns_renew/: cli.py  core.py
